<!--
  Copyright (C) 2015-2016  Michael Roland <michael.roland@fh-hagenberg.at>
                           FH OÖ Forschungs & Entwicklungs GmbH

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">OMAPI Addon-Terminal Exploit</string>
    <string name="app_version">0.01</string>
    <string name="app_description">Demonstrates how to exploit the add-on terminal loader of the Open Mobile API SmartcardService (CVE-2015-6606).</string>
    <string name="app_copyright">Copyright \u00A9\u00A02015-2016 Michael\u00A0Roland FH\u00A0OÖ\u00A0Forschungs\u00A0&amp;\u00A0Entwicklungs\u00A0GmbH</string>

    <string name="main_title">OMAPI Exploit</string>
    <string name="about_title">About OMAPI Addon-Terminal Exploit</string>

    <string name="menu_about">About</string>
    <string name="app_version_prefix">Version</string>
    <string name="app_build_prefix">Build</string>
    <string name="app_build_debug">-DEBUG</string>
    <string name="unknown">unknown</string>

    <string name="app_website_mroland"><a href="http://www.mroland.at/">www.mroland.at</a></string>
    <string name="app_website_usmile"><a href="http://www.usmile.at/">www.usmile.at</a></string>
    <string name="app_website_fhooe"><a href="http://www.fh-ooe.at/">www.fh-ooe.at</a></string>

    <string name="all_rights_reserved">ALL RIGHTS RESERVED.</string>
    <string name="license_text">This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.
\n\nThis program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.
\n\nYou should have received a copy of the GNU General Public License
along with this program.  If not, see http://www.gnu.org/licenses/.</string>

    <string name="menu_show_context">Show context of this activity</string>
    <string name="menu_show_collected">Show collected information</string>
    <string name="menu_save">Save to external storage</string>
    <string name="saved_to_file">Data saved to </string>
    <string name="write_failed">Failed to save data.</string>
    <string name="processing_failed">Failed to retrieve data.</string>
</resources>
