<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015-2016  Michael Roland <michael.roland@fh-hagenberg.at>
                           FH OÖ Forschungs & Entwicklungs GmbH
 
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:src="@drawable/logo_app_square" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/icon"
        android:gravity="left"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/app_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_toRightOf="@id/icon"
        android:gravity="left"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="5sp"
        android:paddingTop="12dp"
        android:text="@string/app_version_prefix"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_toRightOf="@id/app_version_label"
        android:gravity="left"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:text="@string/app_version"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/app_build_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_version"
        android:layout_toRightOf="@id/icon"
        android:gravity="left"
        android:paddingBottom="8dp"
        android:paddingLeft="0dp"
        android:paddingRight="5sp"
        android:paddingTop="4dp"
        android:text="@string/app_build_prefix"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/app_build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_version"
        android:layout_toRightOf="@id/app_build_label"
        android:gravity="left"
        android:paddingBottom="8dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/unknown"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/app_build"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="8dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="2"
            android:stretchColumns="2">

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:id="@+id/app_description"
                    android:layout_column="1"
                    android:layout_span="2"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="4dp"
                    android:text="@string/app_description" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:id="@+id/app_copyright"
                    android:layout_column="1"
                    android:layout_span="2"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/app_copyright" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_column="1"
                    android:layout_span="2"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="0dp"
                    android:text="@string/all_rights_reserved" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/logo_mroland"
                    android:layout_column="1"
                    android:layout_span="1"
                    android:paddingBottom="0dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/logo_mroland_square" />

                <Button
                    android:id="@+id/app_website_mroland"
                    android:layout_column="2"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_span="1"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:paddingBottom="16dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="16dp"
                    android:text="@string/app_website_mroland" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/logo_usmile"
                    android:layout_column="1"
                    android:layout_span="1"
                    android:paddingBottom="0dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/logo_usmile_square" />

                <Button
                    android:id="@+id/app_website_usmile"
                    android:layout_column="2"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_span="1"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:paddingBottom="16dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="16dp"
                    android:text="@string/app_website_usmile" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/logo_fhooe"
                    android:layout_column="1"
                    android:layout_span="1"
                    android:paddingBottom="0dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/logo_fhooe_square" />

                <Button
                    android:id="@+id/app_website_fhooe"
                    android:layout_column="2"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_span="1"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:paddingBottom="16dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="16dp"
                    android:text="@string/app_website_fhooe" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_column="1"
                    android:layout_span="2"
                    android:gravity="left"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="4dp"
                    android:text="@string/license_text" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
