<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015-2016  Michael Roland <michael.roland@fh-hagenberg.at>
                           FH OÖ Forschungs & Entwicklungs GmbH
 
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingTop="0dp"
        android:src="@drawable/logo_fhooe_square_small" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/logo1"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingTop="0dp"
        android:src="@drawable/logo_usmile_square_small" />

    <ImageView
        android:id="@+id/logo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/logo2"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingTop="0dp"
        android:src="@drawable/logo_mroland_square_small" />

    <TextView
        android:id="@+id/copyright_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/logo1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:alpha="0.5"
        android:gravity="center"
        android:paddingBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="16dp"
        android:paddingTop="7dp"
        android:text="@string/app_copyright" />

    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/copyright_label"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/main_menu_action_showcontext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="menuButton_Clicked"
            android:paddingBottom="30dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp"
            android:text="@string/menu_show_context"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/main_menu_action_showcollected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="menuButton_Clicked"
            android:paddingBottom="30dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp"
            android:text="@string/menu_show_collected"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>
